# Qt-project

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/model/: message.cpp  message.h
src/view/: parachuteview.cpp  parachuteview.h
translations/: parachute_en.qm  parachute_en.ts
